# covid-19-prediction

./: Dockerfile  README.md  country_coords.pkl  dockerdeployment.md  model.pkl  notebook.ipynb  predict.py  pyproject.toml  train.py  train2.py
.venv-1/: pyvenv.cfg
