
---

### 2. `pyproject.toml`

This file defines the project and its dependencies for `uv`.

```toml
[project]
name = "covid-19-prediction-api"
version = "0.1.0"
description = "A simple FastAPI service to predict COVID-19 cases."
authors = [
    { name = HenryYao }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
