
[project]
name = "covid-19-prediction"
version = "0.1.0"
description = "A simple FastAPI service to predict COVID-19 cases."
authors = [
    { name = 'HenryYao' }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "xgboost>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly tell hatch which files to include in the wheel. The project
# is a simple script-based repo (no top-level package dir), so list the
# top-level scripts and data files here so hatch can build an editable wheel.
include = [
    "predict.py",
    "train.py",
    "README.md",
    "notebook.ipynb",
    "data/**",
]
